--- a/src/styles.css
+++ b/src/styles.css
@@ -33,8 +33,14 @@ body {
   animation-duration: 2s;
 }
 
-.menu.open {
+.open {
   display: block;
+}
+
+.count-size {
+  display: block;
+  opacity: 0;
+  left: 10000px;
 }
 
 .menu .menu-item {
@@ -75,6 +81,8 @@ body {
   }
   0.1% {
     max-height: 0;
+  }
+  5% {
     opacity: 1;
   }
   100% {
