--- a/src/styles.css
+++ b/src/styles.css
@@ -30,7 +30,7 @@ body {
   display: none;
   list-style: none;
   animation-name: open-menu;
-  animation-duration: 2s;
+  animation-duration: 5s;
 }
 
 .open {
@@ -50,11 +50,11 @@ body {
   cursor: pointer;
   transition: background-color 0.2s ease-in;
   border-radius: inherit;
-  animation: item-open 0.5s;
 }
 
 .menu .menu-item:hover {
   box-shadow: 0px 0px 1px 1px black;
+  color: white;
   transition: box-shadow 0.3s ease;
   background: linear-gradient(-45deg, #0c0c0c, #525252, #292929);
   background-size: 400% 400%;
@@ -76,17 +76,13 @@ body {
 
 @keyframes open-menu {
   0% {
-    max-height: 100vh;
     opacity: 0;
-  }
-  0.1% {
-    max-height: 0;
   }
   5% {
     opacity: 1;
   }
   100% {
-    max-height: 100vh;
+    opacity: 1;
   }
 }
 
