--- a/src/styles.css
+++ b/src/styles.css
@@ -12,34 +12,39 @@ body {
   height: 100vh;
   width: 100%;
   padding: 2rem;
+  display: flex;
 }
 
 .menu {
+  display: none;
   box-shadow: 0 0 15px #ffffff70;
   position: fixed;
   z-index: 1000;
   min-width: 150px;
   max-width: 300px;
   background: rgb(0, 0, 0);
-  background: linear-gradient(4deg,
-      rgba(0, 0, 0, 1) 0%,
-      rgba(46, 46, 46, 1) 35%,
-      rgba(0, 0, 0, 1) 100%);
-
+  background: linear-gradient(
+    4deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(46, 46, 46, 1) 35%,
+    rgba(0, 0, 0, 1) 100%
+  );
   border-radius: 5px;
-  display: block;
   list-style: none;
   opacity: 0;
   transition: opacity 0.1s ease;
 }
 
 .open {
+  display: block;
   opacity: 1;
 }
 
 .count-size {
+  display: block;
   opacity: 0;
   left: -10000px;
+  top: -5000px;
 }
 
 .menu .menu-item {
@@ -69,10 +74,12 @@ body {
   color: #b3b2b2;
   box-shadow: none;
   background: rgb(23, 2, 68);
-  background: linear-gradient(4deg,
-      rgba(23, 2, 68, 1) 0%,
-      rgba(26, 0, 93, 1) 35%,
-      rgba(39, 0, 129, 1) 100%);
+  background: linear-gradient(
+    4deg,
+    rgba(23, 2, 68, 1) 0%,
+    rgba(26, 0, 93, 1) 35%,
+    rgba(39, 0, 129, 1) 100%
+  );
   transition: all 0.3s ease;
 }
 
