--- a/src/classes/notification.css
+++ b/src/classes/notification.css
@@ -26,16 +26,15 @@
 }
 
 .notification__body {
-	background-color: rgba(0, 0, 0, 0.03);
+	background-color: #00000090;
 	padding: 15px;
 	font-style: italic;
+	color: #fff;
 }
 
 .notification__text {
-
 	font-size: 1rem;
 	line-height: 1.2;
-	color: #555;
 }
 
 .notification__subtext {
