--- a/src/modules/clickModule.css
+++ b/src/modules/clickModule.css
@@ -7,8 +7,8 @@ body {
     align-items: center;
 }
 
-
 .clicks-wrapper {
+    padding: 20px;
     opacity: 0;
         animation: ani 9s both;
     width: 600px;
@@ -49,13 +49,14 @@ body {
 
 .clicks {
     text-align: center;
-    font-size: 45px;
+    font-size: 30px;
     color: rgb(143, 143, 143);
 }
 .head {
+    margin-bottom: 20px;
     text-transform: uppercase;
     font-style: normal;
     font-weight: bold;
     color: darkkhaki;
-    font-size: 35px;
+    font-size: 30px;
 }
